# cpupower-gui-qml

./: .gitignore  CMakeLists.txt  README.md  cpupower-gui-qml-9999.ebuild  io.github.cpupower_gui.qt.desktop
helper/: CMakeLists.txt
helper/data/: cpupower-gui-helper.service.in  io.github.cpupower_gui.qt.helper.conf  io.github.cpupower_gui.qt.helper.service.in  io.github.cpupower_gui.qt.policy
helper/src/: helperservice.cpp  helperservice.h  main.cpp
qml/: Main.qml
qml/components/: CpuSelector.qml  CpuTable.qml  FrequencySlider.qml  ProfileSelector.qml
qml/pages/: PreferencesPage.qml  ProfilesPage.qml  SettingsPage.qml
resources/: resources.qrc
src/: application.cpp  application.h  main.cpp
src/config/: appconfig.cpp  appconfig.h  profilemanager.cpp  profilemanager.h
src/core/: cpusettings.cpp  cpusettings.h  dbushelper.cpp  dbushelper.h  sysfsreader.cpp  sysfsreader.h
src/models/: cpulistmodel.cpp  cpulistmodel.h  energyprefmodel.cpp  energyprefmodel.h  governormodel.cpp  governormodel.h  profilemodel.cpp  profilemodel.h
src/tray/: trayicon.cpp  trayicon.h
